--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,9 @@ node_modules/
 # Build output
 dist/
 .next/
+.next/cache
 out/
+
 
 # Environment variables
 .env.local
@@ -30,4 +32,3 @@ out/
 *.njsproj
 *.sln
 *.sw?
-/.next/cache
