--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "node-sass": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "sass": "^1.77.6"
   },
   "devDependencies": {
     "eslint": "^8",
