--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "mobx": "^6.12.4",
+    "mobx": "^6.13.0",
     "mobx-react": "^9.1.1",
     "next": "14.2.4",
     "node-sass": "^9.0.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
+    "react-scrollspy": "^3.4.3",
+    "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.77.6"
   },
   "devDependencies": {
