--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-scrollspy": "^3.4.3",
+    "react-slick": "^0.30.2",
     "react-syntax-highlighter": "^15.5.0",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "^8",
